user permission updates

--- a/PMS-PropertyHapa.Admin/Views/Payments/Index.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Payments/Index.cshtml
@@ -36,7 +36,9 @@
                                         <th scope="col" class="tableHeaderbg">Payee</th>
                                         <th scope="col" class="tableHeaderbg">Amount</th>
                                         <th scope="col" class="tableHeaderbg">Subscription Type</th>
+                                        <th scope="col" class="tableHeaderbg">Email Address</th>
                                         <th scope="col" class="tableHeaderbg">Billing Interval</th>
+                                        <th scope="col" class="tableHeaderbg">No. of Units</th>
                                         <th scope="col" class="tableHeaderbg">Start Date</th>
                                         <th scope="col" class="tableHeaderbg">End Date</th>
                                     </tr>
@@ -75,7 +77,15 @@
                     "className": "tableFontSize align-middle"
                 },
                 {
+                    "data": "EmailAddress",
+                    "className": "tableFontSize align-middle"
+                },
+                {
                     "data": "BillingInterval",
+                    "className": "tableFontSize align-middle"
+                },
+                {
+                    "data": "NoOfUnits",
                     "className": "tableFontSize align-middle"
                 },
                 {
