--- a/PMS-PropertyHapa.Staff/Views/AccountType/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/AccountType/Index.cshtml
@@ -1,8 +1,16 @@
-﻿@using PMS_PropertyHapa.Models.Entities
+﻿@using PMS_PropertyHapa.Staff.Services
+@using PMS_PropertyHapa.Staff.Services.IServices
+@using System.Security.Claims
+@using PMS_PropertyHapa.Models.Entities
 @model IEnumerable<AccountType>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+}
+@inject IPermissionService _permissionService;
+@{
+    var userId = Context.Request.Cookies["userId"];
+    bool addAccountTypePermission = await _permissionService.HasAccess(userId, (int)UserPermissions.AddAccountType);
 }
 <div class="page-body">
     <div class="container-fluid">
@@ -27,9 +35,12 @@
             <div class="col-xl-12 col-md-12 box-col-12">
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <div class="right-side-header">
-                            <button class="btn btn-success" id="newAccountTypeBtn">Add Account Type</button>
-                        </div>
+                        @if (addAccountTypePermission)
+                        {
+                            <div class="right-side-header">
+                                <button class="btn btn-success" id="newAccountTypeBtn">Add Account Type</button>
+                            </div>
+                        }
                     </div>
 
                     <div class="card-body">
@@ -103,6 +114,8 @@
                         return `
                                 <div class="dropdown-basic">
                                     <div class="dropdown">
+                                    @if (addAccountTypePermission)
+                                    {
                                         <div class="btn-group mb-0">
                                             <button class="dropbtn btn btn-success" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
                                             <div class="dropdown-content">
@@ -114,6 +127,7 @@
                                                 </a>
                                             </div>
                                         </div>
+                                    }
                                     </div>
                                 </div>
                             `;
