--- a/PMS-PropertyHapa.Staff/Views/Budget/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Budget/Index.cshtml
@@ -1,10 +1,17 @@
-﻿@using PMS_PropertyHapa.Models.DTO
+﻿@using PMS_PropertyHapa.Staff.Services
+@using PMS_PropertyHapa.Staff.Services.IServices
+@using System.Security.Claims
+@using PMS_PropertyHapa.Models.DTO
 @model IEnumerable<BudgetDto>
 @{
     ViewData["Title"] = "Budget";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+@inject IPermissionService _permissionService;
+@{
+    var userId = Context.Request.Cookies["userId"];
+    bool addBudgetPermission = await _permissionService.HasAccess(userId, (int)UserPermissions.AddBudget);
+}
 <div class="page-body">
     <div class="container-fluid">
         <div class="page-title">
@@ -29,9 +36,12 @@
             <div class="col-xl-12 col-md-12 box-col-12">
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <div class="right-side-header">
-                            <a href="@Url.Action("Create","Budget")" class="btn btn-success float-right ml-2"><i class="fa fa-plus"></i>New Budget</a>
-                        </div>
+                        @if (addBudgetPermission)
+                        {
+                            <div class="right-side-header">
+                                <a href="@Url.Action("Create","Budget")" class="btn btn-success float-right ml-2"><i class="fa fa-plus"></i>New Budget</a>
+                            </div>
+                        }
                     </div>
 
                     <div class="card-body">
@@ -101,6 +111,8 @@
                         return `
                             <div class="dropdown-basic">
                                 <div class="dropdown">
+                                @if (addBudgetPermission)
+                                {
                                     <div class="btn-group mb-0">
                                         <button class="dropbtn btn btn-success" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
                                         <div class="dropdown-content">
@@ -112,6 +124,7 @@
                                             </a>
                                         </div>
                                     </div>
+                                }
                                 </div>
                             </div>
                         `;
