--- a/PMS-PropertyHapa.Staff/Views/Documents/Documents.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/Documents/Documents.cshtml
@@ -1,7 +1,14 @@
-﻿
+﻿@using PMS_PropertyHapa.Staff.Services
+@using PMS_PropertyHapa.Staff.Services.IServices
+@using System.Security.Claims
 @{
     ViewData["Title"] = "Documents";
     Layout = "~/Views/Shared/_Layout.cshtml";
+}
+@inject IPermissionService _permissionService;
+@{
+    var userId = Context.Request.Cookies["userId"];
+    bool addDocumentsPermission = await _permissionService.HasAccess(userId, (int)UserPermissions.AddDocuments);
 }
 
 <div class="page-body">
@@ -25,9 +32,13 @@
             <div class="col-xl-12 col-md-12 box-col-12">
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <div class="right-side-header">
-                            <button class="btn btn-success" id="adddocumentBtn">Add Document</button>
-                        </div>
+                        @if (addDocumentsPermission)
+                        {
+                            <div class="right-side-header">
+                                <button class="btn btn-success" id="adddocumentBtn">Add Document</button>
+                            </div>
+                        }
+                        
                     </div>
 
                     <div class="card-body">
@@ -233,6 +244,8 @@
                         return `
                                     <div class="dropdown-basic">
                                         <div class="dropdown">
+                                        @if (addDocumentsPermission)
+                                        {
                                             <div class="btn-group mb-0">
                                                 <button class="dropbtn btn btn-success" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
                                                 <div class="dropdown-content">
@@ -247,6 +260,8 @@
                                                         </a>
                                                 </div>
                                             </div>
+                                        }
+                                            
                                         </div>
                                     </div>
                                 `;
