--- a/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
+++ b/PMS-PropertyHapa.Admin/Views/Shared/_Layout.cshtml
@@ -227,15 +227,21 @@
                                     </ul>
                                 </li>
                                 <li class="sidebar-list">
+                                    <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","UserPermission")">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg><span>User Permissions</span>
+                                    </a>
+                                </li>
+                                <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","Payments")">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-book"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path></svg><span>Payments</span>
                                     </a>
                                     @* <ul class="sidebar-submenu">
-                                        <li><a href="@Url.Action("PaidPayments","Payments")">View Paid Payments</a></li>
-                                        <li><a href="@Url.Action("DuePayments","Payments")">View Due Payments</a></li>
-                                        <li><a href="@Url.Action("UnPiadPayments","Payments")">View UnPiad Payments</a></li>
+                                    <li><a href="@Url.Action("PaidPayments","Payments")">View Paid Payments</a></li>
+                                    <li><a href="@Url.Action("DuePayments","Payments")">View Due Payments</a></li>
+                                    <li><a href="@Url.Action("UnPiadPayments","Payments")">View UnPiad Payments</a></li>
                                     </ul> *@
                                 </li>
+
 
                                 <li class="sidebar-list">
                                     <a class="sidebar-link sidebar-title link-nav no-arrow" href="@Url.Action("Index","Invoice")">
@@ -334,7 +340,6 @@
     <script src="~/Dashboard/assets/js/height-equal.js"></script>
     <!-- Plugins JS Ends-->
     <script src="~/dashboard/assets/js/select2/select2.full.min.js"></script>
-
     <script src="~/Dashboard/assets/js/chart/google/google-chart-loader.js"></script>
     <script src="~/Dashboard/assets/js/chart/google/google-chart.js"></script>
     <script src="~/Dashboard/assets/js/chart/chartjs/chart.min.js"></script>
