--- a/PMS-PropertyHapa.Staff/Views/ChartAccounts/Index.cshtml
+++ b/PMS-PropertyHapa.Staff/Views/ChartAccounts/Index.cshtml
@@ -1,7 +1,14 @@
-﻿
+﻿@using PMS_PropertyHapa.Staff.Services
+@using PMS_PropertyHapa.Staff.Services.IServices
+@using System.Security.Claims
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+}
+@inject IPermissionService _permissionService;
+@{
+    var userId = Context.Request.Cookies["userId"];
+    bool addChartofAccountsPermission = await _permissionService.HasAccess(userId, (int)UserPermissions.AddChartofAccounts);
 }
 <div class="page-body">
     <div class="container-fluid">
@@ -26,9 +33,12 @@
             <div class="col-xl-12 col-md-12 box-col-12">
                 <div class="card">
                     <div class="card-header d-flex justify-content-between align-items-center">
-                        <div class="right-side-header">
-                            <button class="btn btn-success" id="addAccountBtn">Add Account</button>
-                        </div>
+                        @if (addChartofAccountsPermission)
+                        {
+                            <div class="right-side-header">
+                                <button class="btn btn-success" id="addAccountBtn">Add Account</button>
+                            </div>
+                        }
                     </div>
 
                     <div class="card-body">
@@ -148,6 +158,8 @@
                         return `
                             <div class="dropdown-basic">
                                 <div class="dropdown">
+                                @if(addChartofAccountsPermission)
+                                {
                                     <div class="btn-group mb-0">
                                         <button class="dropbtn btn-success" type="button">Action <span><i class="icofont icofont-arrow-down"></i></span></button>
                                         <div class="dropdown-content">
@@ -159,6 +171,7 @@
                                             </a>
                                         </div>
                                     </div>
+                                }
                                 </div>
                             </div>
                         `;
